Fixes viewport height issue not being dynamic on Safari

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   background-image: url('/Assets/background.png');
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100dvh;
 
   background-position: center;
 
@@ -56,7 +56,7 @@ ul {
   padding-right: 35px;
 
   width: 500px;
-  height: 100vh;
+  height: 100dvh;
 
   background-color: rgba(255, 255, 255, 0.75);
   backdrop-filter: blur(3px);
